[JExtract/JNI] Add `auto` arena to SwiftKitCore and add memory management options (#353)